설명1 업데이트

--- a/analysis_notebooks/WISE-YSO-analysis-1.ipynb
+++ b/analysis_notebooks/WISE-YSO-analysis-1.ipynb
@@ -60,6 +60,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80944_web.jpg         paper_resize.png      vartypes_re.png\n",
+      "80944_web_resize.jpg  table2.png            yso_05403.png\n",
+      "figure4.png           table2_resize.png\n",
+      "paper.png             vartypes.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls ../readme_images"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,7 +87,7 @@
     "\n",
     "여기에서는 원시성 중 하나인 [IRAS 05403-1026](https://simbad.cds.unistra.fr/simbad/sim-id?Ident=%408608654&Name=IRAS%2005403-1026&submit=submit) (아래 이미지의 cyan 동그라미 내)의 WISE 관측 데이터를 추출하고 가공해 보겠습니다.\n",
     "\n",
-    "![yso1.png](readme_images/yso_05403.png)"
+    "![yso1.png](../readme_images/yso_05403.png)"
    ]
   },
   {
