3rd notebook progress updated

--- a/analysis_notebooks/WISE-YSO-analysis-3.ipynb
+++ b/analysis_notebooks/WISE-YSO-analysis-3.ipynb
@@ -35,7 +35,7 @@
     "탄생 초기 별인 YSO의 진화 단계는 위에 설명한 과정 속에 아래와 같이 나누어집니다.  \n",
     "1) Class 0/I : 중심에 갓 탄생한 원시성이 있지만 주위로 아직 낙하하지 않은 차가운 먼지 구름에 둘러싸여 있습니다.  \n",
     "2) Class II : 바깥의 먼지 구름이 없어지고 원시성 주위로 두꺼운 물질의 원반 (protoplanetary disk)가 형성됩니다.  \n",
-    "3) Class III : 중심의 원시성이 더욱 진화하면서 항성풍을 일으키고, 이로 인해 원반 대부분 물질이 바깥으로 날아가며 원반의 흔적 혹은 원시 행성들이 발견됩니다. 우리가 있는 태양계의 원시적 형태 또한 이와 같으리라 추측하고 있습니다.   \n",
+    "3) Class III : 중심의 원시성이 더욱 진화하면서 항성풍을 일으키고, 이로 인해 원반 대부분 물질이 바깥으로 날아가 원반은 사라지고 원반의 흔적 혹은 원시 행성만이 남아 있습니다. 우리가 있는 태양계의 원시적 형태 또한 이와 같으리라 추측하고 있습니다.   \n",
     "\n",
     "\n",
     "![note](example_data/yso123.jpeg)   \n",
