📝 readme 업데이트, misc on notebook 3업데이트

--- a/analysis_notebooks/WISE-YSO-analysis-3.ipynb
+++ b/analysis_notebooks/WISE-YSO-analysis-3.ipynb
@@ -466,9 +466,9 @@
    "source": [
     "표의 괄호 안의 숫자는 각 진화 단계의 전체 원시성에 대한 비율(%)을 의미합니다. \n",
     "첫번째로 Class 0/I 에서의 비율이 약 54.8%로 절반이 넘는 Class 0/I 원시성이 밝기변화를 보임을 알 수 있고, 그 비율은 Class II - III로 오면서 33.1%, 15.4%로 점차 감소하는 것을 볼 수 있습니다. 이 결과는 2.1에서의 scatter plot에서와 같은 양상을 보이고 있습니다.  \n",
-    "두번쨰로 Class 0/I, Class II에서는 Irregular한 변화와 같은 확률적 변화가 같은 Class 내 가장 많이 보이고 있는 데 반해, Class III에서는 Linear, Curved, Periodic 등 단조적인 변화가 가장 많이 보이고 있습니다.\n",
+    "두번째로 Class 0/I, Class II에서는 Irregular한 변화와 같은 확률적 변화가 같은 Class 내 가장 많이 보이고 있는 데 반해, Class III에서는 Linear, Curved, Periodic 등 단조적인 변화가 가장 많이 보이고 있습니다.\n",
     "\n",
-    "**밝기변화 형태의 진화 단계별 분포를 통해, 초기 진화 단계의 원시성일 수록 변화가 크고 불규칙하며, 진화를 거듭하여 Class III 단계에 이르면 밝기변화가 줄어들고 더 안정적이며 불규칙한 변화보다 단조적인 변화를 보임을 알 수 있습니다.**"
+    "**밝기변화 형태의 진화 단계별 분포를 통해, 초기 진화 단계의 원시성일 수록 변화가 크고 불규칙하며 진화를 거듭하여 Class III 단계에 이르면 밝기변화가 줄어들고 더 안정적이며 불규칙한 변화보다 단조적인 변화를 보임을 알 수 있습니다.**"
    ]
   },
   {
